platform/overlays/minikube/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cybercrime-api
  labels:
    app: minio-deployment
  name: minio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio-deployment
    spec:
      volumes:
      - name: data-folder
        hostPath:
          path: '/data/minio'
      containers:
        - image: minio/minio
          volumeMounts:
            - name: data-folder
              mountPath: '/tmp/minio'
              readOnly: false
          name: minio
          args: ["server", "/data/minio/"]
          resources: {}
status: {}
