platform/overlays/minikube/traefik-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: admin
      port: 8080
      protocol: TCP
    - name: http
      port: 80
      protocol: TCP
