platform/overlays/minikube/cybercrime-frontend-hmr-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: cybercrime-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/browser-xss-filter: "true"
  name: cybercrime-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cybercrime-frontend
              servicePort: 3001
            path: /
